Fĩ bug of log screen overflow width

--- a/src/components/pages/crawl/ViewCrawl.css
+++ b/src/components/pages/crawl/ViewCrawl.css
@@ -1,7 +1,7 @@
 #view-crawl-conatiner {
 	display: grid;
 
-	grid-template-columns: 1fr 1fr 1fr 1fr  2fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr 600px;
 	grid-template-rows: 7rem 26rem;
 
 	grid-template-areas:
